Delta connector and config (not working)